samples/_failures_safe/1761437494_309b3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ba5736eb.c: In function ‘main’:
./samples/SAFE/__tmp_ba5736eb.c:135:9: error: expected declaration or statement at end of input
  135 |         }
      |         ^
./samples/SAFE/__tmp_ba5736eb.c:135:9: error: expected declaration or statement at end of input
